# oneselect

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  api_test_coverage_report.md  docker-compose.yml  docker-entrypoint.sh  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/workflows/: container-build-push.yml  publish-to-pypi.yml
alembic/: BASELINE.md  README.md  env.py
alembic/versions/: 001_init.py  6311ddae9299_initial_schema_with_soft_delete_support.py  a1b2c3d4e5f6_add_google_oauth_support.py
api/: index.html
app/: __version__.py  initial_data.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  auth.py  comparisons.py  features.py  login.py  (+5 more)
app/core/: config.py  oauth.py  security.py
app/crud/: __init__.py  base.py  crud_comparison.py  crud_feature.py  crud_project.py  crud_user.py
app/db/: base.py  init_db.py
app/models/: __init__.py  comparison.py  feature.py  project.py  user.py
app/schemas/: __init__.py  comparison.py  feature.py  project.py  user.py
authentication/: index.html
database_schema/: index.html
deploy/: .env.production  README.md  docker-compose.prod.yml  install.sh
deployment/: index.html
dev-guides/: AUTHENTICATION_SETUP.md  AUTH_QUICK_REFERENCE.md  OAUTH_IMPLEMENTATION.md  api_test_coverage_report.md
docs/: api.md  authentication.md  database_schema.md  deployment.md  inconsistency_detection.md  index.md  introduction.md  rest_api_spec_list.md  theory_background.md  working-with-proxies.md
examples/binary_comparison_cli/: README.md  compare.py  requirements.txt  sample_features.csv
inconsistency_detection/: index.html
introduction/: index.html
rest_api_spec_list/: index.html
scripts/: mkcovupd.sh  mkghrelease.sh  mkrelease.sh
search/: search_index.json
tests/: conftest.py  test_cycle_detection.py  test_inconsistency_stats.py  test_integration_parametrized.py  test_integration_workflow.py
tests/api/v1/: test_admin.py  test_admin_edge_cases.py  test_auth.py  test_auth_edge_cases.py  test_comparisons.py  test_comparisons_edge_cases.py  test_features.py  test_features_edge_cases.py  test_google_auth.py  test_graded_comparisons.py  test_login.py  test_model_config.py  test_model_config_edge_cases.py  test_projects.py  test_projects_edge_cases.py  test_statistics_results.py  test_statistics_results_edge_cases.py  test_users.py  test_users_edge_cases.py
tests/utils/: utils.py
theory_background/: index.html
working-with-proxies/: index.html
