[tool.poetry]
name = "oneselect-backend"
version = "0.0.1-rc2"
description = "Backend for OneSelect pairwise comparison system"
authors = ["johan162@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/johan162/oneselect"
repository = "https://github.com/johan162/oneselect"
documentation = "https://github.com/johan162/oneselect.github.io/"
keywords = ["fastapi", "pairwise-comparison", "ahp", "decision-making", "ranking", "priority-matrix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.25"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
alembic = "^1.17.2"
httpx = "^0.28.1"
bcrypt = "^5.0.0"
email-validator = "^2.1.0"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
black = "^25.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"
types-requests = "^2.32.4.20250913"
requests = "^2.32.5"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.api.v1.*_edge_cases"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-n auto --cov=app --cov-report=term-missing"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
    "ignore:The Query.get:sqlalchemy.exc.LegacyAPIWarning"
]

[tool.coverage.run]
omit = [
    "app/initial_data.py",
]

